<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Słownik Języka Śląskiego</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">szukaj</string>
    <string name="results">LISTA WYNIKÓW:</string>
    <string name="no_words_to_display">nie takiego słowa</string>
	<string name="word_original">słowo śląskie</string>
	<string name="word_translation">polski odpowiednik</string>
	<string name="example_use">przykład uzycia (opcjonalnie)</string>
	<string name="your_nickname">Twój pseudonim</string>
	<string name="your_email">Twój email (opcjonalnie)</string>
	<string name="submit">zatwierdź</string>
	<string name="suggest">zaproponuj słowo</string>
    <string name="tap_to_change">(kliknij, żeby zmienić)</string>

    <string name="from_silesian">Z\nśląskiego</string>
    <string name="to_silesian">Na\nśląski</string>

    <string name="from_polish">Z\npolskiego</string>
    <string name="to_polish">Na\npolski</string>

</resources>
