<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/your_nickname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:ems="10"
            android:hint="@string/your_nickname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/word_original_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:ems="10"
            android:hint="@string/word_original" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/word_translation_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:ems="10"
            android:hint="@string/word_translation" />

        <EditText
            android:id="@+id/example_use_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:ems="10"
            android:hint="@string/example_use"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/suggest_button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>